--- a/www/templates/first.html
+++ b/www/templates/first.html
@@ -1,6 +1,10 @@
 <ion-view>
-  <ion-content>
-    这是跳转页面
-    <button ng-click="goBackStart()">回首页</button>
+  <ion-content scroll="false">
+      <img class="bj" src="img/bj_1.jpg" alt=""/>
+      <img id="img_top" src="img/img_up.png" ng-click="goSecond_1()"/>
+      <img id="img_right" src="img/img_right.png" ng-click="goSecond_2()"/>
+      <img id="img_buttom" src="img/img_down.png" ng-click="goSecond_3()"/>
+      <img id="img_left" src="img/img_left.png" ng-click="goSecond_4()"/>
+      <div id="gobanquan" ng-click="goBanQuan()"></div>
   </ion-content>
 </ion-view>
