--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,7 +1,7 @@
 <!--可以将<ion-view>标签视为<html>标签，在其中写页面-->
 <ion-view>
   <ion-content scroll="false">
-
-    <button ng-click="goFirst()">跳转第一页</button>
+      <img class="bj" src="img/hello.jpg" alt=""/>
+      <div id="goFirst" ng-click="goFirst()"></div>
   </ion-content>
 </ion-view>
