--- a/www/templates/second_2.html
+++ b/www/templates/second_2.html
@@ -4,12 +4,12 @@
         <img id="img_top" src="img/second_up_2.png" alt=""/>
         <img class="weather_list_i" src="img/second_cen_2.png" alt=""/>
         <div class="weather_list_t">
-            <div id="weather_1" ng-click=""></div>
-            <div id="weather_2" ng-click=""></div>
-            <div id="weather_3" ng-click=""></div>
-            <div id="weather_4" ng-click=""></div>
-            <div id="weather_5" ng-click=""></div>
-            <div id="weather_6" ng-click=""></div>
+            <div id="weather_1" ng-click="goThree_2_1()"></div>
+            <div id="weather_2" ng-click="goThree_2_2()"></div>
+            <div id="weather_3" ng-click="goThree_2_3()"></div>
+            <div id="weather_4" ng-click="goThree_2_4()"></div>
+            <div id="weather_5" ng-click="goThree_2_5()"></div>
+            <div id="weather_6" ng-click="goThree_2_6()"></div>
         </div>
         <div id="gobanquan" ng-click="goBanQuan()"></div>
     </ion-content>
